--- a/korzina.html
+++ b/korzina.html
@@ -7,40 +7,41 @@
     <title>korzina</title>
     <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="Korzina.css" rel="stylesheet">
-    <script type="text/javascript" src="https://bootstraptema.ru/plugins/jquery/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <div class="row">
-        <header class="navbar navbar-expand-lg text-bg-dark p-6">
-          <a href="https://yandex.ru/profile/236086236677" class="container navbar-brand col-md-2 color-light">Taverna</a>
-          <div class="container col-md-6 color-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse color-light" id="navbarNavDropdown">
-              <ul class="navbar-nav color-light col-md-8">
-                <li class="nav-item"><a class="nav-link" href="#">Акции</a></li>
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Горячее
-                  </a>
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Холодное
-                  </a>
-                  <li class="nav-item"><a class="nav-link" href="#">Свежая выпечка</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Десерты</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Напитки</a></li>
-                <li class="nav-item dropdown">
-                </li>
-              </ul>
+<div class="row">
+    <header class="navbar navbar-expand-lg text-bg-dark p-6 mx-auto" style="border-radius: 20px; max-width: 1350px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <div class="container">
+            <a href="https://yandex.ru/profile/236086236677" class="container navbar-brand col-md-2 color-light">Taverna</a>
+            <div class="container col-md-6 color-light"  style="margin-top: -20px;"><br>
+                <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse color-light" id="navbarNavDropdown">
+                    <div class="navbar-nav color-light col-md-11 ">
+                        <a class="nav-link dropdown-toggle" href="#" id="MenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Горячее
+                        </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Холодное
+                        </a>
+                        <div class="nav-item"><a class="nav-link" href="#">Свежая выпечка</a></div>
+                        <div class="nav-item"><a class="nav-link" href="#">Десерты</a></div>
+                        <div class="nav-item"><a class="nav-link" href="#">Напитки</a></div>
+                        <div class="nav-item dropdown">
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex container col-md-12 dd2 justify-content-end align-items-center" style="margin-top: -32px; display: flex;">
+                    <img src="img/search.png" alt="search">
+                    <img src="img/profile.png" alt="profile">
+                    <a href="korzina.html" ><img src="img/korzina.png" alt="korzina"></a>
+                </div>
             </div>
-          </div>
-          <div class="container col-md-3" >
-          <img src="img/search.png" alt="search">
-          <img src="img/profile.png" alt="profile">
-          <img src="img/korzina.png" alt="korzina">
         </div>
-        </header>
-      </div>
+    </header>
+</div>
 
       <main class="container">
         <div class="row mt-5">
@@ -116,8 +117,8 @@
             </tr>
             </tbody>
         </table>
-
-        <main class="container mt-3">
+</div>
+        <div class="container mt-3">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -143,10 +144,10 @@
             </div>
             <div class="row mt-3">
                 <div class="col-12">
-              <a href="оформления заказа.html"><button type="button"class="btn btn-primary btn-lg btn-block" style="margin-bottom: 10px;">Оформить заказ</button></a>
+              <div class="btn btn-primary btn-lg btn-block" style="margin-bottom: 10px;"><a href="oformleniezakaza.html" style="text-decoration: none; color: #FFFFFF;"> Оформить заказ</a></div>
                 </div>
             </div>
-        </main>
+        </div>
 
     <footer class="footer mt-auto py-3 bg-dark text-white">
         <div class="container">
@@ -190,6 +191,6 @@
       </footer>
 
      <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-     <script src="script.js"></script>
+     <script src="js/script.js"></script>
 </body>
 </html>
